--- a/content/blog/sego-njamoer.mdx
+++ b/content/blog/sego-njamoer.mdx
@@ -9,6 +9,6 @@ published: true
 ### Food Ratings: 7/10
 ### Ambience : 7/10
 
-![My Avatar](/avatar.png)
+![My Avatar](/jamur.jpeg)
 
 For you ITS students, this place must be quite familiar. This is one of the most famous cafes for gathering, especially for new students. The indoor area is quite comfortable, but the outdoor area is somewhat lacking. As for the food, it's standard like any other cafe—average. Nothing special.
