--- a/content/blog/es-kopi.mdx
+++ b/content/blog/es-kopi.mdx
@@ -1,6 +1,6 @@
 ---
 title: Es Kopi Nusantara
-description: Might be your first cafe as a "MABA"
+description: Hijau
 date: 2024-03-06
 tags: ["cafe", "mulyosari", "coffee"]
 published: true
