--- a/content/blog/kepth.mdx
+++ b/content/blog/kepth.mdx
@@ -1,6 +1,6 @@
 ---
 title: Kepth
-description: The OG sambal, so yummy!
+description: Stands for KEPuTiH
 date: 2024-03-06
 tags: ["ayam", "keputih", "indonesian"]
 published: true
