--- a/content/blog/sego-njamoer.mdx
+++ b/content/blog/sego-njamoer.mdx
@@ -1,14 +1,14 @@
 ---
 title: Sego Njamoer
-description: The OG sambal, so yummy!
+description: Ada doa petani jamur
 date: 2024-03-06
 tags: ["ayam", "keputih", "indonesian"]
 published: true
 ---
 
 ### Food Ratings: 7/10
-### Ambience : 7/10
+### Ambience : 5/10
 
 ![My Avatar](/jamur.jpeg)
 
-For you ITS students, this place must be quite familiar. This is one of the most famous cafes for gathering, especially for new students. The indoor area is quite comfortable, but the outdoor area is somewhat lacking. As for the food, it's standard like any other cafe—average. Nothing special.
+Ada doa petani jamur.
