--- a/content/blog/agam-mulyos.mdx
+++ b/content/blog/agam-mulyos.mdx
@@ -1,6 +1,6 @@
 ---
 title: Mi Agam Bangladesh
-description: The OG sambal, so yummy!
+description: 24-hours Noodles!
 date: 2024-03-06
 tags: ["noodle", "mulyosari", "24 hours"]
 published: true
