--- a/content/blog/petrichor.mdx
+++ b/content/blog/petrichor.mdx
@@ -1,14 +1,14 @@
 ---
 title: Petrichor
-description: The OG sambal, so yummy!
+description: NO PORK No Lard!
 date: 2024-03-06
-tags: ["ayam", "keputih", "indonesian"]
+tags: ["cafe", "manyar"]
 published: true
 ---
 
 ### Food Ratings: 7/10
-### Ambience : 7/10
+### Ambience : 9/10
 
 ![My Avatar](/peticor.png)
 
-For you ITS students, this place must be quite familiar. This is one of the most famous cafes for gathering, especially for new students. The indoor area is quite comfortable, but the outdoor area is somewhat lacking. As for the food, it's standard like any other cafe—average. Nothing special.
+Perfect for you who wants to walk your cats or dogs while surrounded by good ambience. This cafe is very VERY pet friendly!
